[gd_scene load_steps=2 format=3 uid="uid://c0mnqhuhjegr3"]

[ext_resource type="Script" path="res://src/textbox.gd" id="1_xm74n"]

[node name="TextBox" type="Node2D"]
script = ExtResource("1_xm74n")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.890196)

[node name="Label" type="Label" parent="."]
z_index = 1
custom_minimum_size = Vector2(400, 0)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.015
offset_right = 400.0
offset_bottom = 232.0
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Timer" type="Timer" parent="."]

[node name="DestroyTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
